--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
      "output_type": "stream",
      "text": [
       "The lowest month is the 6th month, Pressure: 745.0544217687075 Pa.\n",
-      "The highest month is the 9th month, Temp: 913.3059701492538 Pa.\n"
+      "The highest month is the 9th month, Pressure: 913.3059701492538 Pa.\n"
      ]
     }
    ],
@@ -644,7 +644,7 @@
     "lowest_pressure = avg_pressure.min()\n",
     "print(f\"The lowest month is the 6th month, Pressure: {lowest_pressure} Pa.\")\n",
     "highest_pressure = avg_pressure.max()\n",
-    "print(f\"The highest month is the 9th month, Temp: {highest_pressure} Pa.\")"
+    "print(f\"The highest month is the 9th month, Pressure: {highest_pressure} Pa.\")"
    ]
   },
   {
